Changed Photos, Fixed Progress Bar on Mobile

--- a/style.css
+++ b/style.css
@@ -509,11 +509,6 @@ footer {
     padding: 20rem 2rem;
   }
 
-  .progress-bar-wrapper-left {
-    right: 0;
-    left: auto;
-  }
-
   .hero-main {
     bottom: 2.2rem;
   }
